# medical-document-intelligence-assistant

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  RELEASE.md  alembic.ini  docker-compose.yml  justfile  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  provider_request.md
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  publish-pypi.yml  publish-testpypi.yml
apps/backend/: requirements.txt
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 0001_initial_schema.py  0002_judgments.py  0003_prompt_schema_version.py  0004_evidence_entities_verifier.py  0005_medical_assistant_platform.py
apps/backend/app/: cache.py  config.py  constants.py  database.py  logging_setup.py  main.py  mcp_server.py  metrics.py  middleware.py  security_middleware.py  telemetry.py
apps/backend/app/models/: db_models.py  enums.py  medical_db_models.py  medical_schemas.py  schemas.py
apps/backend/app/models/extraction/: __init__.py  _base.py
apps/backend/app/routers/: auth.py  documents.py  extractions.py  medical.py  providers.py  schemas.py
apps/backend/app/security/: auth.py  crypto.py
apps/backend/app/services/: audit.py  jobs.py
apps/backend/app/services/eval/: __init__.py  calibration.py  calibration_v2.py  judge.py  metrics.py  metrics_v2.py
apps/backend/app/services/extraction/: business_rules.py  cross_page.py  double_pass.py  error_classify.py  evidence.py  field_strategies.py  graph.py  presets.py  validation.py  verifier.py  vlm_extractor.py
apps/backend/app/services/infrastructure/: __init__.py  gpu_monitor.py  model_router.py  ollama_client.py  storage.py
apps/backend/app/services/llm/: __init__.py  base.py  prompts.py  (+6 more)
apps/backend/app/utils/: datetime.py  file_handler.py  http.py  mime.py  network.py
apps/backend/data/: medical_references.md
apps/backend/scripts/: e2e_validation.py  validate_llm_providers.py
apps/backend/tests/: conftest.py  test_agentic.py  test_auth_toggle.py  test_business_rules.py  test_cache.py  test_calibration_v2.py  test_checkpointing.py  test_config.py  test_cross_page.py  test_docling_provider.py  test_documents.py  test_double_pass.py  test_durability.py  test_error_classify.py  test_eval_calibration.py  test_eval_diff.py  test_eval_judge.py  test_eval_metrics.py  test_eval_metrics_v2.py  test_evidence.py  test_extraction_graph.py  test_extraction_schemas.py  test_fetch_docvqa.py  test_field_strategies.py  test_glm_ocr_provider.py  test_health.py  test_integration.py  test_jobs.py  test_layout_base.py  test_llm_registry.py  test_mcp_server.py  test_medical_agents.py  test_medical_crypto.py  test_medical_extraction.py  test_medical_safety.py  test_medical_search.py  test_medical_streaming.py  test_model_config_persistence.py  test_model_router.py  test_ocr_registry.py  (+17 more)
apps/frontend/: .eslintrc.json  Dockerfile  next.config.js  package-lock.json  package.json
apps/frontend/src/app/: globals.css  layout.tsx  page.tsx
apps/frontend/src/components/: AppFrame.tsx  AuthPanel.tsx  EvidenceViewer.tsx  Panel.tsx  ThemeToggle.tsx
apps/frontend/src/lib/: api.ts
apps/scripts/: __init__.py  eval_diff.py
artifacts/verification/: medical_process_live.json  qa_query_live.json  verification_live_run.json  verification_live_run.md
docs/: API_DOCUMENTATION.md  ARCHITECTURE.md  ARCHITECTURE_GUIDE.md  ARCHITECTURE_V2.md  BEGINNER_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  DOCKER_GUIDE.md  ENGINES.md  FAQ.md  FOLDER_STRUCTURE.md  GLM_OCR.md  GPU_GUIDE.md  INSTALLATION_GUIDE.md  LIMITATIONS.md  MCP.md  MEDICAL_ENTITY_EXTRACTION_GUIDE.md  MIGRATION_GUIDE.md  OCR_GUIDE.md  OLLAMA_GUIDE.md  PERFORMANCE_GUIDE.md  QUALITY.md  RAG_GUIDE.md  RELEASE_NOTES.md  RUNBOOK.md  TIMELINE_GUIDE.md  TROUBLESHOOTING_GUIDE.md  UPGRADE_SUMMARY.md  ZERO_TO_HERO_STUDY_HANDBOOK.md  observability.md
docs/adr/: 0001-record-architecture-decisions.md  0002-langgraph-for-pipeline.md  0003-sqlite-wal-default.md  0004-secure-by-default.md
docs/diagrams/: pipeline.mmd  system-architecture.mmd
eval/golden_set/v1/: manifest.json
eval/golden_set/v2/: manifest.json
infra/loki/: loki-config.yaml
infra/nginx/: nginx.conf
infra/otel/: otel-collector-config.yml
infra/prometheus/: prometheus.yml
prompts/v1/: extraction.md  reflection.md
prompts/v2/: extraction.md  reflection.md
scripts/: eval_diff.py  fetch_docvqa.py  fetch_golden_set.py  fit_calibrator.py  release.py  verify_medical_live.py
(+36 files in other folders)
