[project]
name = "medical-document-intelligence-assistant"
version = "1.0.0"
description = "Local-first educational medical document intelligence platform with OCR, extraction, timeline, grounded RAG, and multi-agent orchestration."
authors = [{ name = "Ahmad" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12,<3.13"
keywords = [
  "medical-ai",
  "document-intelligence",
  "ollama",
  "glm-ocr",
  "langgraph",
  "fastapi",
  "nextjs",
  "rag",
  "timeline",
  "education",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
  "fastapi>=0.115.0,<1.0",
  "uvicorn[standard]>=0.30.0,<1.0",
  "pydantic>=2.0,<3.0",
  "pydantic-settings>=2.0,<3.0",
  "python-multipart>=0.0.9",
  "aiofiles>=24.0",
  "httpx>=0.27.0",
  "slowapi>=0.1.10",
  "structlog>=26.1.0",
  "prometheus-client>=0.25.0",
  "sqlalchemy[asyncio]>=2.0,<3.0",
  "alembic>=1.14.0,<2.0",
  "psycopg[binary]>=3.2.9,<4.0",
  "asyncpg>=0.30.0,<1.0",
  "aiosqlite>=0.20.0,<1.0",
  "pgvector>=0.3.6,<1.0",
  "langgraph>=0.2.0",
  "langgraph-checkpoint-sqlite>=2.0.0",
  "langchain-core>=0.3.0",
  "cryptography>=44.0.0",
  "PyJWT>=2.10.1",
  "passlib[argon2]>=1.7.4",
  "email-validator>=2.2.0",
  "psutil>=6.1.0",
  "pymupdf>=1.24.0",
  "Pillow>=10.0",
  "python-dateutil>=2.9.0.post0",
  "Jinja2>=3.1.0",
  "markdown>=3.7",
  "reportlab>=4.2.0",
  "opentelemetry-api>=1.42.1",
  "opentelemetry-sdk>=1.42.1",
  "opentelemetry-exporter-otlp>=1.42.1",
]

[project.optional-dependencies]
paddleocr = [
  "paddleocr>=2.7",
  "paddlepaddle>=2.6",
]
test = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0",
  "hypothesis>=6.155.7",
]
lint = ["ruff>=0.6.0"]
mcp = ["mcp[cli]>=1.0.0"]

[project.urls]
Homepage = "https://github.com/ahmad/medical-document-intelligence-assistant"
Repository = "https://github.com/ahmad/medical-document-intelligence-assistant"
Issues = "https://github.com/ahmad/medical-document-intelligence-assistant/issues"

[project.scripts]
mdia-api = "app.main:app"
mdia-mcp = "app.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps/backend/app"]

[tool.hatch.build.targets.wheel.force-include]
"prompts" = "app/prompts"

[tool.hatch.build.targets.sdist]
include = [
  "apps/backend/app/**",
  "apps/backend/app/py.typed",
  "prompts/**",
  "README.md",
  "LICENSE",
]

[tool.uv]
required-version = ">=0.5.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["apps/backend/tests"]
pythonpath = ["."]
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  "--tb=short",
]
filterwarnings = [
  "error",
  "ignore::DeprecationWarning:websockets.*",
  "ignore::DeprecationWarning:uvicorn.*",
  "ignore::DeprecationWarning:pydantic.*",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
  "apps/backend/.venv",
  "apps/frontend/node_modules",
  "apps/frontend/.next",
  "dist",
  "build",
]

[tool.ruff.lint]
select = [
  "E",
  "W",
  "F",
  "I",
  "B",
  "UP",
  "C4",
  "SIM",
  "RUF",
]
ignore = ["E501", "B008", "B904"]

[tool.ruff.lint.per-file-ignores]
"apps/backend/tests/**" = ["B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pyright]
include = ["apps/backend/app", "scripts/release.py", "apps/backend/tests"]
exclude = [
  "apps/backend/.venv",
  "apps/backend/tests/_test_uploads",
  "apps/frontend",
]
pythonVersion = "3.12"
pythonPlatform = "Linux"
typeCheckingMode = "basic"
useLibraryCodeForTypes = true
reportMissingImports = "error"
reportMissingTypeStubs = "warning"
reportUnknownMemberType = "warning"
reportUnknownVariableType = "warning"
reportUnknownArgumentType = "warning"
reportUnknownParameterType = "warning"
reportUnknownLambdaType = "warning"
reportMissingTypeArgument = "warning"
reportInvalidTypeVarUse = "warning"
reportPrivateImportUsage = "warning"
reportUnusedImport = "warning"
reportUnusedClass = "warning"
reportUnusedFunction = "warning"
reportUnusedVariable = "warning"
reportUnnecessaryIsInstance = "warning"
reportUnnecessaryCast = "warning"
